Add section benefist

--- a/index.html
+++ b/index.html
@@ -5,10 +5,83 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Site</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Poppins:wght@500;600&family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize-mini.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+
+<main>
+
+  <section class="section-benefits">
+    <div class="container">
+
+      <div class="section-benefits__heading">
+        <h1 class="visually-hidden"></h1>
+        <p class="section-benefits__text">Simple & Modern</p>
+        <h2 class="section-benefits__title">
+          Benefits You Get When Using Our Services
+        </h2>
+      </div>
+
+      <ul class="section-benefits__list">
+
+        <li class="section-benefits__item">
+          <div class="list-content__wrapper">
+            <h3 class="benefits-list__title">Best Quality</h3>
+            <p class="benefits-list__text">
+              All of our funiture uses the best materials and choices for our customers.
+            </p>
+          </div>
+        </li>
+
+        <li class="section-benefits__item item-two">
+          <div class="list-content__wrapper">
+            <h3 class="benefits-list__title box-two">Free Shipping</h3>
+            <p class="benefits-list__text">
+              All of our funiture uses the best materials and choices for our customers.
+            </p>
+          </div>
+        </li>
+
+        <li class="section-benefits__item item-three">
+          <div class="list-content__wrapper">
+            <h3 class="benefits-list__title">Warranty</h3>
+            <p class="benefits-list__text">
+              All of our funiture uses the best materials and choices for our customers.
+            </p>
+          </div>
+        </li>
+
+      </ul>
+
+      <div class="section-benefist__bottom-content">
+
+        <div class="image-wrapper">
+          <img src="./img/furniture-bg.png" alt="funiture" width="487" height="608" class="section-bg__img">
+        </div>
+
+
+        <div class="right-content__wrapper">
+          <p class="right-content__text">Luxroom Modern</p>
+          <h2 class="right-content__title">
+            We Provide You The Best Experience
+          </h2>
+          <p class="right-content__dsc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium semper porta dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium semper porta dui.
+          </p>
+
+          <a href="#" class="right-content__link button">ORDER NOW</a>
+        </div>
+
+      </div>
+
+
+    </div>
+  </section>
+
+</main>
+
 </body>
 </html>
