Add fave section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,51 @@
 
 <main>
 
+  <section class="our-fave__section">
+    <div class="container">
+      <h2 class="our-fave--section__title">Our Fave Kits</h2>
+      <ul class="our-fave__list">
+        <li class="our-fave__item">
+          <img src="https://picsum.photos/id/870/357/264" alt="home furnitures" width="357" height="264">
+          <div class="our-fave__inner">
+            <p class="our-fave__inner-text">White Swan Chair</p>
+            <p class="our-fave__inner-money"><span>$</span>69.99</p>
+          </div>
+          <span class="our-fave__inner-sale">sale</span>
+        </li>
+
+        <li class="our-fave__item">
+          <img class="our-fave__img" src="https://picsum.photos/id/870/357/264" alt="home furnitures" width="357" height="264">
+          <div class="our-fave__inner">
+            <p class="our-fave__inner-text">Urban sofa set</p>
+            <p class="our-fave__inner-money"><span>$</span>569</p>
+          </div>
+          <span class="our-fave__inner-sale">sale</span>
+        </li>
+
+        <li class="our-fave__item">
+          <img src="https://picsum.photos/id/870/357/264" alt="home furnitures" width="357" height="264">
+          <div class="our-fave__inner">
+            <p class="our-fave__inner-text">Big  Mono • Kitchen set</p>
+            <p class="our-fave__inner-money"><span>$</span>569</p>
+          </div>
+          <span class="our-fave__inner-sale">sale</span>
+        </li>
+      </ul>
+      <div class="furneture-content__all">
+        <div class="furneture-content">
+          <h2 class="furneture-content__title"><span class="furneture-content__span">Simple & Modern</span>Furniture</h2>
+          <p class="furneture-content__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium semper porta dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium semper porta dui.</p>
+          <a class="button" href="#">Order now</a>
+        </div>
+        <img src="img/furneture-img.png" alt="">
+      </div>
+    </div>
+    <a href="https://www.youtube.com/" target="_blank">
+      <img src="img/iframe-img.png" alt="">
+    </a>
+  </section>
+
   <section class="section-benefits">
     <div class="container">
 
